--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 #main{
-  background-color: #f8f8f8;
+  background-color: #f3f3f3;
   -webkit-box-shadow:0px 0px 20px 0px #a7a7a7 ;
   -moz-box-shadow:0px 0px 20px 0px #a7a7a7 ;
   box-shadow:0px 0px 10px 0px #7a7a7a ;
@@ -26,6 +26,7 @@ header{
 }
 header h1{
   display: inline;
+  font-size: 3.2rem;
 }
 header a{
   color: #0c58b0;
@@ -37,8 +38,8 @@ header a:hover{
   color: white;
 }
 
-h2{
-  margin: 20px 0;
+.section-title{
+  margin: 30px 0;
 }
 
 .login-field{
@@ -52,18 +53,27 @@ h2{
   padding: 10px;
 }
 
+.user-generated-content{
+  font-family: Oregano, Ubuntu, Verdana;
+  font-size: 130%;
+}
+
 .objectiveList{
   margin-top: 3rem;
 }
 .objective .name {
   padding: 10px;
 }
-.listTitle{
-  font-weight: bold;
+
+.objective-new {
+  margin-top: 3rem;
+}
+.objective-new input[type=text]{
+  margin-right: 0.5rem;
 }
 
-.objectiveNew {
-  margin-top: 3rem;
+.objective input[type=checkbox], .objective .name{
+  margin-right: 0.5rem;
 }
 
 .done {
@@ -83,5 +93,5 @@ h2{
 }
 
 .fas{
-  padding-right: 1rem;
+  padding-right: 0.5rem;
 }
